# rtsp-streamer

./: CLAUDE.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/process/: lifecycle.rs  mod.rs  publish.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/src/: main.rs
crates/tauri-app/src/commands/: mod.rs  publish.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs
crates/web-server/src/routes/: mod.rs  publish.rs
frontend/: package-lock.json  package.json
frontend/src/api/: adapter.ts  http-client.ts  tauri-client.ts  types.ts
frontend/src/components/settings/: form-fields.tsx
frontend/src/components/stream/: hls-player.tsx  webrtc-player.tsx
frontend/src/hooks/: use-api.ts  use-config.ts  use-paths.ts  use-process.ts  use-publish.ts
frontend/src/pages/: dashboard.tsx  paths.tsx  settings.tsx  streams.tsx
