[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/web-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
