[package]
name = "mediamtx-manager-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
mediamtx-manager-core = { path = "../core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri-plugin-dialog = "2.6.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
